.gradle/gradle.log
****************************
 Powered By MCP:             
 http://modcoderpack.com/    
 Searge, ProfMobius, Fesh0r, 
 R4wk, ZeuX, IngisKahn, bspkrs
 MCP Data version : unknown
****************************
:downloadClient SKIPPED
:downloadServer SKIPPED
:getVersionJson
:extractUserDev UP-TO-DATE
:mergeJars SKIPPED
:applyBinPatches SKIPPED
:downloadMcpTools SKIPPED
:extractMcpData UP-TO-DATE
:genSrgs SKIPPED
:deobfBinJar SKIPPED
:compileApiJava UP-TO-DATE
:processApiResources UP-TO-DATE
:apiClasses UP-TO-DATE
:sourceMainJava
:compileJavawarning: [options] bootstrap class path not set in conjunction with -source 1.6
E:\1git\witchery\build\sources\java\com\emoniph\witchery\entity\EntityWitchProjectile.java:1309: error: inconvertible types
         EntityPlayer player = (EntityPlayer)mop;
                                             ^
  required: EntityPlayer
  found:    MovingObjectPosition
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error
1 warning
 FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 23.349 secs
